UPDATE[style product]

--- a/products.html
+++ b/products.html
@@ -52,18 +52,14 @@
                 <a class="nav-link" href="products.html">Our Products</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#">Cart</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="login.html">Log In</a>
               </li>
-              <li class="nav-item">
-                <div class="navbar-icon">
-                  <i class="fa fa-shopping-cart"></i>
-                </div>
-              </li>
-              <li class="nav-item">
-                <div class="navbar-icon">
-                  <i class="fa fa-clipboard"></i>
-                </div>
-              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Status</a>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -83,8 +79,12 @@
         </div>
       </div>
     </div>
-
-    
+    <!-- serach -->
+    <div class="search_box">
+      <div class="search_btn"><i class="fa fa-search"></i></div>
+      <input type="text" class="input_search" placeholder="Search">
+    </div>
+    <!-- end serach -->
     <div class="products">
       <div class="container">
         <div class="row">
