--- a/signup.html
+++ b/signup.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Colorlib</title>
-
-    <!-- Font Icon -->
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <title>EveryDay Sign Up</title>
 
     <!-- Main css -->
     <link rel="stylesheet" href="assets/css/sign-style.css">
