--- a/cart.html
+++ b/cart.html
@@ -11,9 +11,7 @@
         <link rel="stylesheet" href="assets/css/fontawesome.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/cart.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
         <link rel="stylesheet" href="assets/css/owl.css">
-        <link rel="stylesheet" href="assets/css/card.css">
     </head>
     <body>
         <!-- ***** Preloader Start ***** -->
@@ -189,6 +187,18 @@
             <a class="btn">Checkout</a>
           </div>
     
+        </div>
+      </footer>
+
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="inner-content">
+                <p>EveryDay BY My team</p>
+              </div>
+            </div>
+          </div>
         </div>
       </footer>
     
