--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
+              <a href="product-detail.html"><img src="assets/images/product_01.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 1 : หยดน้ำแห่งกัลดราบก</h4></a>
                 <h6>220.00 บาท</h6>
