delete unused files

--- a/products.html
+++ b/products.html
@@ -170,19 +170,72 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 all des">
+                    <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
                         <a href="#"><img src="assets/images/product_06.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 6 : นาฬิกาทรายแห่งอะบลามีลิน</h4></a>
-                            <h6>280.00 บาท</h6>
-                            <p>เหล่ามาสเตอร์แห่งร้านน้ำชาวิทาเรียแน่ใจว่า เวลาแห่งการปะทะกระชั้นเข้ามาทุกที 
-                              เมื่อฮอปกินส์ทำให้หิมะตกครั้งแรก เพราะหวังจะเจาะบาร์เรียร์เมืองวิชชอร์เข้ามา 
-                              ผู้นำที่แท้จริงของเหล่าฮอปกินส์เริ่มร้อนรนอย่างเห็นได้ชัด
-                              ขณะเดียวกันเจย์ก็ได้รับภารกิจใช้หนี้หาไข่ออสทาราจากทรอย และเขาคงสบายใจกว่านี้ 
-                              หากไข่ออสทาราใบนี้ไม่ได้เป็นไข่ของหนึ่งในคนจากตระกูลซิมป์สัน </p>
-                              <i class="fa fa-plus-circle"></i>
-                          </div>
+                          <a href="#"><h4>ครอบครัวตึ๋งหนืดตะลุยวิทย์ </h4><h4>ตอน ไดโนเสาร์สมองกล (ฉบับการ์ตูน)</h4></a>
+                          <h6>150.00 บาท</h6>
+                          <p>
+                            "โทรุ"  "ฮารุ" และ "จอห์น" ได้เข้าไปผจญภัยในไดโนพาร์ก สวนสนุกโลกล้านปีที่เต็มไปด้วยหุ่นยนต์ไดโนเสาร์สุดเท่ 
+                            แต่ไดโนเสาร์เหล่านี้มีพฤติกรรมแปลก ๆ เพราะมีคนไปดัดแปลงโปรแกรมเข้า 
+                            "ดร.วัน" จึงต้องขอความช่วยเหลือจากเด็ก ๆ ทั้งสาม เพื่อช่วยแก้ไขโคดดิ้ง ทำให้หุ่นยนต์ไดโนเสาร์กลับมาเป็นเหมือนเดิมให้ได้!</p>
+                            <i class="fa fa-plus-circle"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_07.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>Why?</h4><h4>ความปลอดภัยในชีวิตประจำวัน (ฉบับการ์ตูน)</h4></a>
+                          <h6>159.00 บาท</h6>
+                          <p>
+                            "เซพี" พ่อมดน้อยแห่งโรงเรียนแห่งเวทมนตร์ ตั้งใจจะเสกเมล็ดพันธุ์โชคดี แต่ดันทำพลาดเสกเมล็ดพันธุ์สุดอันตรายขึ้นมา 
+                            และเมล็ดพันธุ์นี้เผอิญไปติดผมเด็กสาวผู้ร่าเริง เฟียนา ทำให้เธอเสี่ยงประสบอุบัติเหตุต่อเนื่อง 15 วัน เซพีและเซฟเพื่อนร่วมห้องที่แอบชอบเธอ
+                            จึงต้องพยายามทุกวิถีทางช่วยเฟียนาจากอุบัติเหตุรอบตัวต่าง ๆ มากมาย มาดูกันว่าทั้งคู่ จะช่วยเฟียนาจากสารพัดอันตรายสำเร็จหรือไม่!</p>
+                            <i class="fa fa-plus-circle"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_08.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>Little Chef : </h4><h4>ขนมปังนานาชาติ (ฉบับการ์ตูน)</h4></a>
+                          <h6>175.00 บาท</h6>
+                          <p>
+                            "เจนนี่" สาวน้อยที่ใฝ่ฝันอยากเป็นเชฟขนมหวาน เผลอใช้เตาอบโบราณที่โรงเรียน จนถูกดูดไปในโลกอีกมิติพร้อมเพื่อนซี้ "ไวโอเล็ต" ทั้งสองได้พบเพื่อนใหม่ใน "ดินแดนขนมปัง" 
+                            และจำเป็นต้องลงแข่งศึกประลองนักทำขนมปัง พร้อมบททดสอบมากมายเพื่อหาทางกลับบ้านให้ได้ และตอนนั้นเองเจนนี่ก็พบกับสิ่งสำคัญที่ตามหามานาน...มาติดตามเอาใจช่วยสาวน้อย Little Chef กันเลย!</p>
+                            <i class="fa fa-plus-circle"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_09.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>ไม่ยากถ้าอยากเก่งคณิต</h4><h4>แวมไพร์ซีรีส์ (ฉบับการ์ตูน)</h4></a>
+                          <h6>150.00 บาท</h6>
+                          <p>
+                            เปิดเทอมครั้งนี้เป็นช่วงเวลาที่ "เลมอน" รอคอยที่สุด เมื่อ "แอล" เพื่อนผู้ลึกลับที่เจอกันในค่ายคณิตศาสตร์ ย้ายมาเรียนโรงเรียนเดียวกับเธอ ต้องมีเรื่องสนุก ๆ เกิดขึ้นแน่! 
+                            แอลช่วยสอนเทคนิคและวิธีการคิดใหม่ ๆ จนทำให้วิชาคณิตศาสตร์ที่ดูสลับซับซ้อนกลายเป็นเรื่องง่าย ๆ เหมือนปอกกล้วยเข้าปากไปเลย แต่เรื่องราวกลับยิ่งระทึก 
+                            เมื่อเธอได้รู้ความลับว่าแอลไม่ใช่มนุษย์ เขาเป็นแวมไพร์ แถมยังถูกนักล่าแวมไพร์คอยไล่ล่าอีกด้วย มาลุ้นไปกับเรื่องรางลี้ลับและเรียนรู้คณิตศาสตร์อย่างเพลิดเพลิน!</p>
+                            <i class="fa fa-plus-circle"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_10.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>ตะลุยดินแดนช็อกโกแลต</h4><h4>(ฉบับการ์ตูน)</h4></a>
+                          <h6>65.00 บาท</h6>
+                          <p>
+                            ไหนใครชอบกินช็อกโกแลตบ้าง ยกมือขึ้น ช็อกโกแลต ขนมหวานแสนอร่อยที่เอาไปทำขนมได้หลายเมนู แถมอร่อยไปหมด มีทั้งช็อกโกแลตปั่น ไอศกรีมช็อกแลต 
+                            ช็อกโกแลตทรัพเฟิล หูยยยย แค่พูดก็น้ำลายไหล!! มาสนุกไปกับเรื่องราวของช็อกโกแลต พร้อมเกร็ดความรู้สนุก ๆ กับแก๊ง 4 แสบ ที่จะมาป่วนโลกช็อกโกแลตกันเลย!!!</p>
+                            <i class="fa fa-plus-circle"></i>
+                        </div>
                       </div>
                     </div>
                 </div>
