--- a/cart.html
+++ b/cart.html
@@ -184,7 +184,7 @@
     
           <div class="right">
             <h1 class="total">Total: <span>1725.00</span>฿</h1>
-            <a class="btn">Checkout</a>
+            <a class="btn" href="./checkout.html">Checkout</a>
           </div>
     
         </div>
