--- a/index.html
+++ b/index.html
@@ -130,19 +130,17 @@
         </li>
         <li>
           <a href="#" class="card">
-              <img src="./assets/images/product_06.jpg" class="card__image">
+              <img src="./assets/images/product_05.jpg" class="card__image">
               <div class="card__overlay">
                   <div class="card__header">
                       <div class="card__header-text">
-                          <h1>Witchoar (วิชชอร์) 6</h1>
+                          <h1>Witchoar (วิชชอร์) 5</h1>
                       </div>
                   </div>
                   <p>
-                    เหล่ามาสเตอร์แห่งร้านน้ำชาวิทาเรียแน่ใจว่า เวลาแห่งการปะทะกระชั้นเข้ามาทุกที เมื่อฮอปกินส์ทำให้หิมะตกครั้งแรก 
-                    เพราะหวังจะเจาะบาร์เรียร์เมืองวิชชอร์เข้ามา 
-                  ผู้นำที่แท้จริงของเหล่าฮอปกินส์เริ่มร้อนรนอย่างเห็นได้ชัด
-                  ขณะเดียวกันเจย์ก็ได้รับภารกิจใช้หนี้หาไข่ออสทาราจากทรอย และเขาคงสบายใจกว่านี้ 
-                  หากไข่ออสทาราใบนี้ไม่ได้เป็นไข่ของหนึ่งในคนจากตระกูลซิมป์สัน</p>
+                    จดหมายจากเจย์คนก่อน หอลืมชาติ และแซมป์สันเพราะระดับของพ่อมดในโลกเวทมนตร์และได้กับค่าลดหย่อนภาษีธุรกิจ
+                    เจย์จึงต้องเดินทางไปเข้าทดสอบเมจิกลอสต์ พร้อมกับพนักงานคนอื่นของวิทาเรียทีรูม แต่การประเมินครั้งนี้ไม่ธรรมดา เพราะเมืองที่จัดการทดสอบคือ 
+                    มาเจนต้า สถานที่เกิดเหตุการณ์ร้ายในความทรงจำของโซอี้ท่ามกลางปัญหาที่ประดังเข้ามา ความช่วยเหลือก็มาถึงเเละครั้งนี้มันมาจากมือของ แมทธิว ฮอปกินส์</p>
               </div>
           </a>
       </li>
@@ -193,21 +191,6 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 3 : ถ้วยเเก้วแห่งโมนาเซีย</h4></a>
-                <h6>310.00 บาท</h6>
-                <p>ความลับของซิมป์สัน ศาสตร์อัญเชิญปีศาจ เเละ Trick or Treat!
-                  เหล่ามาสเตอร์ต้องประหลาดใจอีกครั้ง
-                  เมื่อเจย์ครอบครอง อัสโมว จิตวิญญาณของเถ้ากระดูกที่บ่งชี้ว่าเขาคือ สปิริเชียล พ่อมดผู้ควบคุมปีศาจ
-                  เเน่นอน มันนำปัญหามาให้เจย์ พอๆ กับที่ช่วยคลายปมปริศนา หนึ่งในนั้นคือ การเผชิญหน้านักสะสมปีศาจมากเล่ห์อย่าง ชาร์ม ซิมป์สัน
-                  การฟื้นความรู้ศาสตร์เวทย์มนตร์ว่ายากเเล้ว เเต่การรับมือกับซิมป์สันหลายคนพร้อมกันอาจยากยิ่งกว่า!</p>
-                  <i class="fa fa-plus-circle"></i>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
               <a href="#"><img src="assets/images/product_04.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 4 : ใบชาแห่งอัลฮาคิม</h4></a>
@@ -228,30 +211,28 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_05.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/product_06.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 5 : กาน้ำแห่งโฮโนรุอุส</h4></a>
-                <h6>290.00 บาท</h6>
+                <a href="#"><h4>ครอบครัวตึ๋งหนืดตะลุยวิทย์ </h4><h4>ตอน ไดโนเสาร์สมองกล (ฉบับการ์ตูน)</h4></a>
+                <h6>150.00 บาท</h6>
                 <p>
-                  จดหมายจากเจย์คนก่อน หอลืมชาติ และแซมป์สัน
-                  เพราะระดับของพ่อมดในโลกเวทมนตร์และได้กับค่าลดหย่อนภาษีธุรกิจ เจย์จึงต้องเดินทางไปเข้าทดสอบเมจิกลอสต์ พร้อมกับพนักงานคนอื่นของวิทาเรียทีรูม 
-                  แต่การประเมินครั้งนี้ไม่ธรรมดา เพราะเมืองที่จัดการทดสอบคือ มาเจนต้า สถานที่เกิดเหตุการณ์ร้ายในความทรงจำของโซอี้
-                  ท่ามกลางปัญหาที่ประดังเข้ามา ความช่วยเหลือก็มาถึงเเละ...</p>
+                  "โทรุ"  "ฮารุ" และ "จอห์น" ได้เข้าไปผจญภัยในไดโนพาร์ก สวนสนุกโลกล้านปีที่เต็มไปด้วยหุ่นยนต์ไดโนเสาร์สุดเท่ 
+                  แต่ไดโนเสาร์เหล่านี้มีพฤติกรรมแปลก ๆ เพราะมีคนไปดัดแปลงโปรแกรมเข้า 
+                  "ดร.วัน" จึงต้องขอความช่วยเหลือจากเด็ก ๆ ทั้งสาม เพื่อช่วยแก้ไขโคดดิ้ง ทำให้หุ่นยนต์ไดโนเสาร์กลับมาเป็นเหมือนเดิมให้ได้!</p>
                   <i class="fa fa-plus-circle"></i>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_06.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/product_07.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 6 : นาฬิกาทรายแห่งอะบลามีลิน</h4></a>
-                <h6>280.00 บาท</h6>
-                <p>เหล่ามาสเตอร์แห่งร้านน้ำชาวิทาเรียแน่ใจว่า เวลาแห่งการปะทะกระชั้นเข้ามาทุกที 
-                  เมื่อฮอปกินส์ทำให้หิมะตกครั้งแรก เพราะหวังจะเจาะบาร์เรียร์เมืองวิชชอร์เข้ามา 
-                  ผู้นำที่แท้จริงของเหล่าฮอปกินส์เริ่มร้อนรนอย่างเห็นได้ชัด
-                  ขณะเดียวกันเจย์ก็ได้รับภารกิจใช้หนี้หาไข่ออสทาราจากทรอย และเขาคงสบายใจกว่านี้ 
-                  หากไข่ออสทาราใบนี้ไม่ได้เป็นไข่ของหนึ่งในคนจากตระกูลซิมป์สัน </p>
+                <a href="#"><h4>Why?</h4><h4>ความปลอดภัยในชีวิตประจำวัน (ฉบับการ์ตูน)</h4></a>
+                <h6>159.00 บาท</h6>
+                <p>
+                  "เซพี" พ่อมดน้อยแห่งโรงเรียนแห่งเวทมนตร์ ตั้งใจจะเสกเมล็ดพันธุ์โชคดี แต่ดันทำพลาดเสกเมล็ดพันธุ์สุดอันตรายขึ้นมา 
+                  และเมล็ดพันธุ์นี้เผอิญไปติดผมเด็กสาวผู้ร่าเริง เฟียนา ทำให้เธอเสี่ยงประสบอุบัติเหตุต่อเนื่อง 15 วัน เซพีและเซฟเพื่อนร่วมห้องที่แอบชอบเธอ
+                  จึงต้องพยายามทุกวิถีทางช่วยเฟียนาจากอุบัติเหตุรอบตัวต่าง ๆ มากมาย มาดูกันว่าทั้งคู่ จะช่วยเฟียนาจากสารพัดอันตรายสำเร็จหรือไม่!</p>
                   <i class="fa fa-plus-circle"></i>
               </div>
             </div>
