ADD[CSS product image] UPDATE[ALL pages]

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>EveryDay</title>
+    <link rel="icon" href="./assets/images/logo-1.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     
@@ -50,10 +51,10 @@
                 <a class="nav-link" href="products.html">Our Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cart.html">Cart</a>
+                <a class="nav-link" href="login.html">Log In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Log In</a>
+                <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart"></i></a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Status</a>
@@ -167,7 +168,7 @@
                   บันทึกทบทวนตัวตนในอดีต และกระดาษเตือนความจำที่จดไว้ทำให้เขาต้องเดินทางไปเริ่มชีวิตใหม่ที่เมืองวิชชอร์
                   เป็นพนักงานในร้านน้ำชาชื่อ วิทาเรียทีรูม
                   แต่ชีวิตใหม่ที่น่าจะเรียบง่าย กลับไม่สงบอย่างที่คิด ...</p>
-                  <i class="fa fa-plus-circle"></i>
+                  <i class="fa fa-cart-plus"></i>
               </div>
             </div>
           </div>
@@ -185,7 +186,7 @@
                   ท่ามกลางความกดดันทั้งหลาย พวกฮอปกินส์ก็ออกล่าตัวเจย์อีกครั้ง
                   หนนี้พวกนั้นไม่สนใจว่าจะได้ตัวเจย์ที่ยังมีลมหายใจหรือไม่
                   เพราะพวกเขาต้องการแม้เหลือเพียงวิญญาณ!</p>
-                  <i class="fa fa-plus-circle"></i>
+                  <i class="fa fa-cart-plus"></i>
               </div>
             </div>
           </div>
@@ -205,7 +206,7 @@
                   รวมถึงหัวหน้ามาสเตอร์แห่งร้านวิทาเรียทีรูมที่จะล้วงมันออกมา
                   ขณะที่ปริศนาของเจย์เริ่มคลี่คลาย
                   ฮอปกินส์ก็เริ่มเคลื่อนไหว และครั้งนี้อาจต้องปะทะกับเหล่าซิมป์สัน!</p>
-                  <i class="fa fa-plus-circle"></i>
+                  <i class="fa fa-cart-plus"></i>
               </div>
             </div>
           </div>
@@ -219,7 +220,7 @@
                   "โทรุ"  "ฮารุ" และ "จอห์น" ได้เข้าไปผจญภัยในไดโนพาร์ก สวนสนุกโลกล้านปีที่เต็มไปด้วยหุ่นยนต์ไดโนเสาร์สุดเท่ 
                   แต่ไดโนเสาร์เหล่านี้มีพฤติกรรมแปลก ๆ เพราะมีคนไปดัดแปลงโปรแกรมเข้า 
                   "ดร.วัน" จึงต้องขอความช่วยเหลือจากเด็ก ๆ ทั้งสาม เพื่อช่วยแก้ไขโคดดิ้ง ทำให้หุ่นยนต์ไดโนเสาร์กลับมาเป็นเหมือนเดิมให้ได้!</p>
-                  <i class="fa fa-plus-circle"></i>
+                  <i class="fa fa-cart-plus"></i>
               </div>
             </div>
           </div>
@@ -233,7 +234,7 @@
                   "เซพี" พ่อมดน้อยแห่งโรงเรียนแห่งเวทมนตร์ ตั้งใจจะเสกเมล็ดพันธุ์โชคดี แต่ดันทำพลาดเสกเมล็ดพันธุ์สุดอันตรายขึ้นมา 
                   และเมล็ดพันธุ์นี้เผอิญไปติดผมเด็กสาวผู้ร่าเริง เฟียนา ทำให้เธอเสี่ยงประสบอุบัติเหตุต่อเนื่อง 15 วัน เซพีและเซฟเพื่อนร่วมห้องที่แอบชอบเธอ
                   จึงต้องพยายามทุกวิถีทางช่วยเฟียนาจากอุบัติเหตุรอบตัวต่าง ๆ มากมาย มาดูกันว่าทั้งคู่ จะช่วยเฟียนาจากสารพัดอันตรายสำเร็จหรือไม่!</p>
-                  <i class="fa fa-plus-circle"></i>
+                  <i class="fa fa-cart-plus"></i>
               </div>
             </div>
           </div>
