--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EveryDay Login</title>
+    <link rel="icon" href="./assets/images/logo-1.png">
 
     <!-- Main css -->
     <link rel="stylesheet" href="assets/css/sign-style.css">
@@ -17,7 +18,7 @@
             <div class="container">
                 <div class="signin-content">
                     <div class="signin-image">
-                        <figure><img src="assets/images/signin-image.jpg" alt="sing up image"></figure>
+                        <figure><img src="assets/images/logo-2.png" alt="sing up image"></figure>
                         <a href="signup.html" class="signup-image-link">Create an account</a>
                     </div>
                     <div class="signin-form">
