--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>EveryDay Products</title>
+    <link rel="icon" href="./assets/images/logo-1.png">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/product.css">
 
   </head>
 
@@ -48,10 +50,10 @@
                 <a class="nav-link" href="products.html">Our Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cart.html">Cart</a>
+                <a class="nav-link" href="login.html">Log In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Log In</a>
+                <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart"></i></a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Status</a>
@@ -75,6 +77,13 @@
         </div>
       </div>
     </div>
+    <!--category-->
+    <ul class="breadcrumb">
+      <li>นิยาย</a></li>
+      <li>การ์ตูน</a></li>
+      <li>วิชาการ</a></li>
+    </ul>
+    <!--category-->
     <!-- serach -->
     <div class="search_box">
       <div class="search_btn"><i class="fa fa-search"></i></div>
@@ -98,7 +107,7 @@
                             บันทึกทบทวนตัวตนในอดีต และกระดาษเตือนความจำที่จดไว้ทำให้เขาต้องเดินทางไปเริ่มชีวิตใหม่ที่เมืองวิชชอร์
                             เป็นพนักงานในร้านน้ำชาชื่อ วิทาเรียทีรูม
                             แต่ชีวิตใหม่ที่น่าจะเรียบง่าย กลับไม่สงบอย่างที่คิด ...</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -116,7 +125,7 @@
                             ท่ามกลางความกดดันทั้งหลาย พวกฮอปกินส์ก็ออกล่าตัวเจย์อีกครั้ง
                             หนนี้พวกนั้นไม่สนใจว่าจะได้ตัวเจย์ที่ยังมีลมหายใจหรือไม่
                             เพราะพวกเขาต้องการแม้เหลือเพียงวิญญาณ!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -131,7 +140,7 @@
                             เมื่อเจย์ครอบครอง อัสโมว จิตวิญญาณของเถ้ากระดูกที่บ่งชี้ว่าเขาคือ สปิริเชียล พ่อมดผู้ควบคุมปีศาจ
                             เเน่นอน มันนำปัญหามาให้เจย์ พอๆ กับที่ช่วยคลายปมปริศนา หนึ่งในนั้นคือ การเผชิญหน้านักสะสมปีศาจมากเล่ห์อย่าง ชาร์ม ซิมป์สัน
                             การฟื้นความรู้ศาสตร์เวทย์มนตร์ว่ายากเเล้ว เเต่การรับมือกับซิมป์สันหลายคนพร้อมกันอาจยากยิ่งกว่า!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -151,7 +160,7 @@
                             รวมถึงหัวหน้ามาสเตอร์แห่งร้านวิทาเรียทีรูมที่จะล้วงมันออกมา
                             ขณะที่ปริศนาของเจย์เริ่มคลี่คลาย
                             ฮอปกินส์ก็เริ่มเคลื่อนไหว และครั้งนี้อาจต้องปะทะกับเหล่าซิมป์สัน!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -166,7 +175,7 @@
                             เพราะระดับของพ่อมดในโลกเวทมนตร์และได้กับค่าลดหย่อนภาษีธุรกิจ เจย์จึงต้องเดินทางไปเข้าทดสอบเมจิกลอสต์ พร้อมกับพนักงานคนอื่นของวิทาเรียทีรูม 
                             แต่การประเมินครั้งนี้ไม่ธรรมดา เพราะเมืองที่จัดการทดสอบคือ มาเจนต้า สถานที่เกิดเหตุการณ์ร้ายในความทรงจำของโซอี้
                             ท่ามกลางปัญหาที่ประดังเข้ามา ความช่วยเหลือก็มาถึงเเละ...</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -180,7 +189,7 @@
                             "โทรุ"  "ฮารุ" และ "จอห์น" ได้เข้าไปผจญภัยในไดโนพาร์ก สวนสนุกโลกล้านปีที่เต็มไปด้วยหุ่นยนต์ไดโนเสาร์สุดเท่ 
                             แต่ไดโนเสาร์เหล่านี้มีพฤติกรรมแปลก ๆ เพราะมีคนไปดัดแปลงโปรแกรมเข้า 
                             "ดร.วัน" จึงต้องขอความช่วยเหลือจากเด็ก ๆ ทั้งสาม เพื่อช่วยแก้ไขโคดดิ้ง ทำให้หุ่นยนต์ไดโนเสาร์กลับมาเป็นเหมือนเดิมให้ได้!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -194,7 +203,7 @@
                             "เซพี" พ่อมดน้อยแห่งโรงเรียนแห่งเวทมนตร์ ตั้งใจจะเสกเมล็ดพันธุ์โชคดี แต่ดันทำพลาดเสกเมล็ดพันธุ์สุดอันตรายขึ้นมา 
                             และเมล็ดพันธุ์นี้เผอิญไปติดผมเด็กสาวผู้ร่าเริง เฟียนา ทำให้เธอเสี่ยงประสบอุบัติเหตุต่อเนื่อง 15 วัน เซพีและเซฟเพื่อนร่วมห้องที่แอบชอบเธอ
                             จึงต้องพยายามทุกวิถีทางช่วยเฟียนาจากอุบัติเหตุรอบตัวต่าง ๆ มากมาย มาดูกันว่าทั้งคู่ จะช่วยเฟียนาจากสารพัดอันตรายสำเร็จหรือไม่!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -207,7 +216,7 @@
                           <p>
                             "เจนนี่" สาวน้อยที่ใฝ่ฝันอยากเป็นเชฟขนมหวาน เผลอใช้เตาอบโบราณที่โรงเรียน จนถูกดูดไปในโลกอีกมิติพร้อมเพื่อนซี้ "ไวโอเล็ต" ทั้งสองได้พบเพื่อนใหม่ใน "ดินแดนขนมปัง" 
                             และจำเป็นต้องลงแข่งศึกประลองนักทำขนมปัง พร้อมบททดสอบมากมายเพื่อหาทางกลับบ้านให้ได้ และตอนนั้นเองเจนนี่ก็พบกับสิ่งสำคัญที่ตามหามานาน...มาติดตามเอาใจช่วยสาวน้อย Little Chef กันเลย!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -221,7 +230,7 @@
                             เปิดเทอมครั้งนี้เป็นช่วงเวลาที่ "เลมอน" รอคอยที่สุด เมื่อ "แอล" เพื่อนผู้ลึกลับที่เจอกันในค่ายคณิตศาสตร์ ย้ายมาเรียนโรงเรียนเดียวกับเธอ ต้องมีเรื่องสนุก ๆ เกิดขึ้นแน่! 
                             แอลช่วยสอนเทคนิคและวิธีการคิดใหม่ ๆ จนทำให้วิชาคณิตศาสตร์ที่ดูสลับซับซ้อนกลายเป็นเรื่องง่าย ๆ เหมือนปอกกล้วยเข้าปากไปเลย แต่เรื่องราวกลับยิ่งระทึก 
                             เมื่อเธอได้รู้ความลับว่าแอลไม่ใช่มนุษย์ เขาเป็นแวมไพร์ แถมยังถูกนักล่าแวมไพร์คอยไล่ล่าอีกด้วย มาลุ้นไปกับเรื่องรางลี้ลับและเรียนรู้คณิตศาสตร์อย่างเพลิดเพลิน!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
@@ -234,7 +243,75 @@
                           <p>
                             ไหนใครชอบกินช็อกโกแลตบ้าง ยกมือขึ้น ช็อกโกแลต ขนมหวานแสนอร่อยที่เอาไปทำขนมได้หลายเมนู แถมอร่อยไปหมด มีทั้งช็อกโกแลตปั่น ไอศกรีมช็อกแลต 
                             ช็อกโกแลตทรัพเฟิล หูยยยย แค่พูดก็น้ำลายไหล!! มาสนุกไปกับเรื่องราวของช็อกโกแลต พร้อมเกร็ดความรู้สนุก ๆ กับแก๊ง 4 แสบ ที่จะมาป่วนโลกช็อกโกแลตกันเลย!!!</p>
-                            <i class="fa fa-plus-circle"></i>
+                            <i class="fa fa-cart-plus"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_11.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>ท่องโลกมหัศจรรย์สิ่งมีชีวิต)</h4></a>
+                          <h6>80.00 บาท</h6>
+                          <p>
+                            รู้จักกับสิ่งมีชีวิตทั้งพืชและสัตว์ที่มีการแบ่งประเภทออกเป็นหลากหลายสายพันธุ์ ด้วยภาพประกอบมากมาย ช่วยให้ผู้อ่านจดจำและเข้าใจในเนื้อหาได้ง่ายขึ้น 
+                            และสามารถอ่านหนังสือได้อย่างสนุกสนาน แม้จะเป็นเรื่องในเชิงวิชาการก็ตาม</p>
+                            <i class="fa fa-cart-plus"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_12.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>ตะลุยโจทย์ Error 500 ข้อ</h4></a>
+                          <h6>151.00 บาท</h6>
+                          <p>
+                            รวมสุดยอดแนวข้อสอบครบทุกประเด็น พร้อมเฉลยและคำอธิบายอย่างละเอียด 
+                            รู้ใจ GAT O-NET CU-TEP CU-AAT TU-GET SMART-I และสอบตรงทุกสนาม</p>
+                            <i class="fa fa-cart-plus"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_13.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>ตะลุยโจทย์ Error 500 ข้อ</h4></a>
+                          <h6>19.00 บาท</h6>
+                          <p>
+                            ตารางฝึกคัดอักษรเกาหลี ฝึกคัดทั้งพยัญชนะและสระ พร้อมตัวอย่างลำดับการลากเส้น 
+                            ขนาดเล็ก อีกทั้งยังพกพาสะดวก นำติดตัวไปฝึกได้ทุกที และสามารถฝึกคัดได้ทุกวันให้จำได้ขึ้นใจ!</p>
+                            <i class="fa fa-cart-plus"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_14.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>ระบบร่างกายมนุษย์ AR สามมิติ</h4></a>
+                          <h6>142.00 บาท</h6>
+                          <p>
+                            หนังสือ "ระบบร่างกายมนุษย์ AR สามมิติ" เล่มนี้ จัดขึ้นเพื่อเป็นประโยชน์แก่เด็กและเยาวชนได้เรียนรู้ส่วนต่างๆ ของร่างกาย ไม่ว่าจะเป็น เซลล์ เลือดและภูมิคุ้มกัน ระบบประสาท การรับรู้เฉพาะ ระบบหัวใจและหลอดเลือด ระบบทางเดินหายใจ ระบบทางเดินปัสสาวะ ระบบทางเดินอาหาร ระบบต่อมไร้ท่อ และระบบสืบพันธุ์ 
+                            ถ่ายทอดผ่านเนื้อหาและภาษาที่เข้าใจง่าย ภาพประกอบสีสันสวยงาม ฟรี! ดาวน์โหลดแอปพลิเคชัน สำหรับดูภาพเสมือนจริง 360 องศา</p>
+                            <i class="fa fa-cart-plus"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all dev">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/product_15.jpg" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>เล่นสนุกกับแสง</h4></a>
+                          <h6>109.00 บาท</h6>
+                          <p>
+                            สื่อเสริมการเรียนรู้วิทยาศาสตร์ด้านแสงที่ถูกพัฒนาขึ้นมาเพื่อให้เด็กๆ ในระดับประถมศึกษา ได้สัมผัสลองเล่นกับแสงด้วยชุดอุปกรณ์ง่ายๆ 
+                            ที่สามารถจัดหาหรือประกอบได้เอง ทำการทดลองวิทยาศาสตร์ด้านแสง ซึ่งเป็นเรื่องราวเกี่ยวข้องกับแสงที่พบเห็นได้ทั่วไปในชีวิตประจำวัน 
+                            เช่น แสงขาวคืออะไร มีความแตกต่างกับแสงสีอื่นอย่างไร วิธีการกระจายแสงขาวด้วยสมบัติพื้นฐานทางแสง ตัวอย่างเช่น การหักเห 
+                            การเลี้ยวเบน และการแทรกสอด การเคลื่อนที่ของแสง การมองเห็นวัตถุหรือภาพใดๆ ของนัยน์ตามนุษย์ต้องใช้อะไร และอื่นๆ 
+                            อีกมากมาย ที่ได้คัดสรรมาไว้อย่างดีแล้วสำหรับเด็กๆ ให้ได้มีความสนุกสนานในการเรียนรู้วิทยาศาสตร์</p>
+                            <i class="fa fa-cart-plus"></i>
                         </div>
                       </div>
                     </div>
