--- a/product-detail.html
+++ b/product-detail.html
@@ -4,7 +4,8 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-      <title>EveryDay</title>
+      <title>EveryDay Products</title>
+      <link rel="icon" href="./assets/images/logo-1.png">
       <!-- Bootstrap core CSS -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
        
@@ -45,10 +46,10 @@
                   <a class="nav-link" href="products.html">Our Products</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="cart.html">Cart</a>
+                  <a class="nav-link" href="login.html">Log In</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="login.html">Log In</a>
+                  <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart"></i></a>
                 </li>
                 <!-- <li class="nav-item">
                   <a class="nav-link" href="#">Status</a>
