--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EveryDay Sign Up</title>
+    <link rel="icon" href="./assets/images/logo-1.png">
 
     <!-- Main css -->
     <link rel="stylesheet" href="assets/css/sign-style.css">
@@ -42,7 +43,7 @@
                         </form>
                     </div>
                     <div class="signup-image">
-                        <figure><img src="assets/images/signup-image.jpg" alt="sing up image"></figure>
+                        <figure><img src="assets/images/logo-1.png" alt="sing up image"></figure>
                         <a href="login.html" class="signup-image-link">I am already member</a>
                     </div>
                 </div>
