--- a/checkout.html
+++ b/checkout.html
@@ -100,6 +100,7 @@
         <input type="text" id="zip" name="zip" pattern="[0-9]{4}"  size="93">
       </fieldset>
 
+            <!-- สรุปรายการสินค้า -->
       <fieldset class="field2">
       <h2>สรุปรายการสินค้า</h2>
       <label for="fbook">  </label><br>
