ADD[status profile order-detail] UPDATE[all pages]

--- a/cart.html
+++ b/cart.html
@@ -43,8 +43,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="products.html">Our Products</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item sub-menus">
                   <a class="nav-link" href="login.html">Log In</a>
+                  <ul>
+                      <li><a href="profile.html"><i class="fa fa-edit"></i> Edit Profile</a></li>
+                      <li><a href="status.html"><i class="fa fa-clipboard"></i> Check status</a></li>
+                      <li><a href="#"><i class="fa fa-sign-out"></i> Log out</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart"></i></a>
