--- a/checkout.html
+++ b/checkout.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css"> 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/checkout-style.css">
+    <link rel="stylesheet" href="assets/css/checkout.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <script>
@@ -65,8 +65,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="products.html">Our Products</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item sub-menus">
                   <a class="nav-link" href="login.html">Log In</a>
+                  <ul>
+                      <li><a href="profile.html"><i class="fa fa-edit"></i> Edit Profile</a></li>
+                      <li><a href="status.html"><i class="fa fa-clipboard"></i> Check status</a></li>
+                      <li><a href="#"><i class="fa fa-sign-out"></i> Log out</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart"></i></a>
@@ -81,7 +86,7 @@
       </header>
 
        <!-- Page Content -->
-       <div class="page-heading cart-heading header-text">
+       <div class="page-heading checkout-heading header-text">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
