UPDATE[ALL css responsive HTML product-detail profile status] ADD[CSS product-detail]

--- a/product-detail.html
+++ b/product-detail.html
@@ -11,10 +11,8 @@
        
         <link rel="stylesheet" href="assets/css/fontawesome.css">
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/cart.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
         <link rel="stylesheet" href="assets/css/owl.css">
-        <link rel="stylesheet" href="assets/css/card.css">
+        <link rel="stylesheet" href="assets/css/product-detail.css">
     </head>
     <body>
         <!-- ***** Preloader Start ***** -->
@@ -79,8 +77,14 @@
       </div>
       <!-- End Page Content -->
       <div class="container">
-          <div class="product-detail">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="product-detail-img">
               <img src="./assets/images/product_01.jpg">
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="product-detail">
               <table>
                   <tr>
                       <th>
@@ -118,6 +122,8 @@
                 </tr>
               </table>
           </div>
+          </div>
+        </div>
       </div>
       <footer>
         <div class="container">
