--- a/profile.html
+++ b/profile.html
@@ -96,7 +96,9 @@
           <input class="input-group" type="text" id="email" name="mail"><br>
           <label for="pass" class="label1">Password :</label><br>
           <input class="input-group" type="text" id="pass" name="pass"><br>
-          <button class="btn" type="submit">SAVE</button>
+          <!-- <label for="pass" class="label1">Enter your password to change :</label><br>
+          <input class="input-group" type="text" id="pass" name="pass" required><br> -->
+          <input class="btn" type="submit" value="SAVE">
       </fieldset>
       
       <footer>
